--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         <div class="ricerca-utente-film">
 
         </div>
-
         <script id="template-film" type="text/x-handlebars-template">
             <div class="info-film">
-                <p>{{titolo}}</p>
+                <span>{{titolo}}</span>
                 <p>{{titoloOriginale}}</p>
                 <p>{{lingua}}</p>
-                <p>{{voto}}</p>
+                <p>{{{voto}}}</p>
             </div>
         </script>
+
+
 
         <script src="js/main.js" charset="utf-8"></script>
     </body>
