--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
             <input type="text" name="" value="fantozzi">
             <button type="button" name="button">INVIO</button>
         </div>
+
         <div class="ricerca-utente-film">
 
         </div>
+
+        <!-- <div class="bottom-page">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         <script id="template-film" type="text/x-handlebars-template">
             <div class="info-film">
                 <span>{{titolo}}</span>
                 <p>{{titoloOriginale}}</p>
-                <p>{{lingua}}</p>
+                {{{lingua}}}
                 <p>{{{voto}}}</p>
             </div>
         </script>
