--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
             <button type="button" name="button">INVIO</button>
         </div>
 
-        <div class="ricerca-utente-film">
-
-        </div>
+        <div class="ricerca-utente-film"></div>
+        <div class="ricerca-utente-serieTV"></div>
 
         <!-- <div class="bottom-page">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
-        <script id="template-film" type="text/x-handlebars-template">
-            <div class="info-film">
+        <script id="template-film-serietv" type="text/x-handlebars-template">
+            <div class="info-film-serietv">
                 <span>{{titolo}}</span>
                 <p>{{titoloOriginale}}</p>
                 {{{lingua}}}
