--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="ricerca-utente-serieTV"></div>
 
         <!-- <div class="bottom-page">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
-        <script id="template-film-serietv" type="text/x-handlebars-template">
+        <script id="template-film-serietv" type="text/x-handlebars-template">    <!-- TEMPLATE HANDLEBARS per film e serie tv -->
             <div class="info-film-serietv">
+                <img class="copertina" src="{{copertina}}" alt="{{copertinaNome}}">
                 <span>{{titolo}}</span>
                 <p>{{titoloOriginale}}</p>
                 {{{lingua}}}
                 <p>{{{voto}}}</p>
             </div>
         </script>
-
 
 
         <script src="js/main.js" charset="utf-8"></script>
