--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <script id="template-film-serietv" type="text/x-handlebars-template">    <!-- TEMPLATE HANDLEBARS per film e serie tv -->
             <div class="info-film-serietv">
                 <img class="copertina" src="{{copertina}}" alt="{{copertinaNome}}">
-                <span>{{titolo}}</span>
-                <p>{{titoloOriginale}}</p>
-                {{{lingua}}}
-                <p>{{{voto}}}</p>
-                <p>{{overview}}</p>
+                <div class="contenuto">
+                    <p><span class="bold">Titolo: </span> {{titolo}}</p>
+                    <p><span class="bold">Titolo originale: </span> {{titoloOriginale}}</p>
+                    <p class="inline"><span class="bold img-line">Lingua Originale: </span> {{{lingua}}}</p>
+                    <p><span class="bold">Voto: </span> {{{voto}}}</p>
+                    <p><span class="bold">Overview: </span> {{overview}}</p>
+                </div>
             </div>
         </script>
 
