--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 
-        <header>
+        <header>        <!-- HEADER -->
             <div class="container">
                 <div class="input-box">
                     <input type="text" name="" placeholder="Cerca un film o una serie tv..." value="">
@@ -23,8 +23,8 @@
         </header>
 
 
-        <div class="ricerca-utente-film"></div>
-        <div class="ricerca-utente-serieTV"></div>
+        <div class="ricerca-utente-film"></div>     <!-- Qua dentro sono posizionati i FILM trovati -->
+        <div class="ricerca-utente-serieTV"></div>  <!-- Qua dentro sono posizionati le SERIE TV trovate -->
 
         <!-- <div class="bottom-page">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         <script id="template-film-serietv" type="text/x-handlebars-template">    <!-- TEMPLATE HANDLEBARS per film e serie tv -->
