Improved functions [See desc.]
-improved originalLanguageFlag function
-improved chiamataAjax function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="contenuto">
                     <p><span class="bold">Titolo: </span> {{titolo}}</p>
                     <p><span class="bold">Titolo originale: </span> {{titoloOriginale}}</p>
-                    <p><span class="bold img-line">Lingua Originale: </span> {{{lingua}}}</p>
+                    <p><span class="bold img-line">Lingua Originale: </span> <img class="lingua-originale" src="img/flags/{{{lingua}}}.png" alt="{{{lingua}}} flag"></p>
                     <p><span class="bold">Voto: </span> {{{voto}}}</p>
                     <p><span class="bold">Overview: </span> {{overview}}</p>
                 </div>
