Started working on Milestone 5
-added transition hover

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>        <!-- HEADER -->
             <div class="container">
                 <div class="input-box">
-                    <input type="text" name="" placeholder="Cerca un film o una serie tv..." value="">
+                    <input type="text" name="" placeholder="Cerca un film o una serie tv..." value="fantozzi">
                     <i class="fas fa-search"></i>
                 </div>
                 <p>BOOLFLIX</p>
@@ -36,6 +36,8 @@
                     <p><span class="bold img-line">Lingua Originale: </span> <img class="lingua-originale" src="img/flags/{{{lingua}}}.png" alt="{{{lingua}}} flag"></p>
                     <p><span class="bold">Voto: </span> {{{voto}}}</p>
                     <p><span class="bold">Overview: </span> {{overview}}</p>
+                    <p><span class="hidden id">{{id}}</p>
+                    <p class="attori">{{attori}}</p>
                 </div>
             </div>
         </script>
