--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>        <!-- HEADER -->
             <div class="container">
                 <div class="input-box">
-                    <input type="text" name="" placeholder="Cerca un film o una serie tv..." value="fantozzi">
+                    <input type="text" name="" placeholder="Cerca un film o una serie tv..." value="">
                     <i class="fas fa-search"></i>
                 </div>
                 <p>BOOLFLIX</p>
@@ -37,7 +37,7 @@
                     <p><span class="bold">Voto: </span> {{{voto}}}</p>
                     <p><span class="bold">Overview: </span> {{overview}}</p>
                     <p><span class="hidden id">{{id}}</p>
-                    <p class="attori">{{attori}}</p>
+                    <p><span class="bold">Attori: </span><span class="attori"></span></p>
                 </div>
             </div>
         </script>
