Milestone 5 [2/2]    see desc.
-still to create function to avoid duplicate code

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                     <p><span class="bold img-line">Lingua Originale: </span> <img class="lingua-originale" src="img/flags/{{{lingua}}}.png" alt="{{{lingua}}} flag"></p>
                     <p><span class="bold">Voto: </span> {{{voto}}}</p>
                     <p><span class="bold">Overview: </span> {{overview}}</p>
-                    <p><span class="hidden id">{{id}}</p>
                     <p><span class="bold">Attori: </span><span class="attori"></span></p>
+                    <p><span class="hidden id">{{id}}</p>
+                    <p><span class="bold">Generi: </span>{{generi}}</p>
                 </div>
             </div>
         </script>
